# oxidizePdf

./: .claude-session-20250718-095805.md  .gitignore  .tarpaulin.toml  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_BUG_REPORT.md  Cargo.toml  FLATEDECODE_ERROR_RECOVERY.md  FORMS_STATUS.md  ISO_32000_COMPLIANCE_SUMMARY.md  ISO_COMPLIANCE.md  MEMORY_OPTIMIZATION.md  PDF_RENDERING_ANALYSIS_REPORT.md  PROJECT_PROGRESS.md  README.md  REPOSITORY_ARCHITECTURE.md  ROADMAP.md  SESSION_SUMMARY.md  VERSION_COMPATIBILITY.md  analysis_group1.txt  analyze_by_groups.py  analyze_pdf_structure.py  analyze_phase1_sample.py  analyze_simple.py  build_rs_cov.profraw  codecov.yml  comprehensive_analysis_report.json  debug_text_state.rs  dump_pdf_content.py  error_focus_report.md  fix_doctests.sh  generate_test_pdfs.py  generate_updated_compliance_report.rs  github_issue_body.md  group1.txt  pdf_analysis_complete_20250721_223947.json  pdf_test_results.txt  proposed_auto_compliance_test.rs  (+11 more)
oxidize-pdf-api/: API_DOCUMENTATION.md  Cargo.toml  README.md
oxidize-pdf-api/src/: api.rs  api_old.rs  api_tests.rs  lib.rs  main.rs
oxidize-pdf-api/tests/: api_tests.rs  merge_tests.rs
oxidize-pdf-cli/: Cargo.toml  README.md
oxidize-pdf-cli/src/: main.rs
oxidize-pdf-cli/tests/: cli_integration_tests.rs
oxidize-pdf-core/: Cargo.toml  PROJECT_PROGRESS.md  character_encoding_analysis.json  character_encoding_report.md  character_map_report.md  comprehensive_analysis_report.json  error_focus_report.md  pdf_analysis_report.json  pdf_analysis_report.md  simple_pdf_analysis.txt  summary_analysis_report.md
oxidize-pdf-core/benches/: ocr_benchmarks.rs
oxidize-pdf-core/examples/: actions_example.rs  advanced_tables_demo.rs  ai_ready_invoice.rs  all_form_fields_demo.rs  analyze_memory_usage.rs  analyze_pdf_rendering.rs  analyze_pdf_simple.rs  analyze_pdf_with_render.rs  annotations_example.rs.disabled  basic_page_test.rs  basic_tagging.rs  batch_memory_test.rs  batch_processing.rs  character_encoding_analysis.rs.disabled  check_forms_simple.rs  clipping_demo.rs  cmap_text_extraction.rs.already_disabled  commercial_compatibility_test.rs.disabled  community_edition_showcase.rs  comprehensive_demo.rs  comprehensive_forms_test.rs  comprehensive_pdf_analysis.rs.disabled  create_pdf_with_images.rs  custom_fonts.rs  custom_fonts_example.rs  debug_pdf_structure.rs  debug_text_state.rs  debug_xref.rs  debug_xref_stream.rs  document_structure_example.rs  encryption_example.rs  error_recovery.rs  extended_graphics_state_example.rs  external_images_test.rs  extract_images.rs  extract_pages.rs  extract_text.rs  font_embedding_example.rs  forms_and_annotations_example.rs  forms_commercial_test.rs  (+71 more)
oxidize-pdf-core/src/: compression.rs  document.rs  error.rs  geometry.rs  lib.rs  page.rs  page_forms.rs  page_lists.rs  page_tables.rs  writer.rs
oxidize-pdf-core/src/actions/: action.rs  goto_action.rs  launch_action.rs  mod.rs  named_action.rs  uri_action.rs
oxidize-pdf-core/src/annotations/: annotation.rs  annotation_type.rs  link.rs  markup.rs  mod.rs  text.rs
oxidize-pdf-core/src/batch/: job.rs  mod.rs  progress.rs  result.rs  worker.rs
oxidize-pdf-core/src/document/: encryption.rs
oxidize-pdf-core/src/encryption/: aes.rs  aes_advanced.rs  crypt_filters.rs  embedded_files.rs  encryption_dict.rs  mod.rs  object_encryption.rs  permissions.rs  permissions_enforcement.rs  public_key.rs  rc4.rs  standard_security.rs
oxidize-pdf-core/src/fonts/: embedder.rs  font_cache.rs  font_descriptor.rs  font_metrics.rs  loader.rs  mod.rs  ttf_parser.rs
oxidize-pdf-core/src/forms/: field.rs  field_type.rs  form_data.rs  mod.rs  working_field.rs
oxidize-pdf-core/src/graphics/: color.rs  color_profiles.rs  image.rs  mod.rs  path.rs  patterns.rs  pdf_image.rs  shadings.rs  state.rs
oxidize-pdf-core/src/memory/: cache.rs  lazy_loader.rs  memory_mapped.rs  mod.rs  stream_processor.rs
oxidize-pdf-core/src/objects/: array.rs  (+4 more)
oxidize-pdf-core/tests/: annotations_comprehensive_test.rs  annotations_error_handling_test.rs  annotations_integration_test.rs  architecture_simple_test.rs  batch_processing_tests.rs  circular_ref_test.rs  commercial_compatibility_integration_test.rs.disabled  compression_test.rs  custom_fonts_test.rs  document_limits_integration.rs.disabled  encryption_basic_test.rs  fixtures_support.rs  font_embedding_integration.rs  font_embedding_integration_test.rs  font_encoding_test.rs  font_error_handling_integration.rs.disabled  font_workflows_integration.rs  fonts_comprehensive_test.rs  fonts_unit_tests.rs  form_processing_integration.rs  form_validation_edge_cases.rs.disabled  forms_comprehensive_test.rs  forms_cross_module_integration_test.rs  forms_document_integration_test.rs  forms_error_handling_test.rs  forms_parser_integration_test.rs  forms_performance_scalability_test.rs  forms_validation_javascript_test.rs  integration_tests.rs  interactive_features_test.rs  memory_optimization_integration.rs  memory_optimization_tests.rs  memory_stress_integration.rs  merge_font_mapping_test.rs  new_architecture_test.rs  operations_test.rs  parser_edge_cases_integration.rs  parser_malformed_comprehensive_test.rs  parser_stress_and_recovery_test.rs  parser_tests.rs  (+17 more)
test-suite/: .gitignore  API_DISCREPANCIES.md  Cargo.toml  ISO_32000_COMPLIANCE_SUMMARY.md  ISO_COMPLIANCE_HONEST_REPORT.md  README.md  REAL_COMPLIANCE_STATUS.md  test-config.toml
test-suite/benches/: cli_benchmarks.rs  core_benchmarks.rs  memory_benchmarks.rs  parser_bench.rs
test-suite/external-suites/: DOWNLOAD_INSTRUCTIONS.md
test-suite/fuzz/: Cargo.toml  README.md
test-suite/scripts/: download_external_suites.sh  run_fuzzer.sh  update_external_suites.sh
test-suite/src/: corpus.rs  external_suites.rs  lib.rs  parser_validation.rs  spec_compliance.rs
test-suite/tests/: api_verification_simple.rs  external_suite_tests.rs  fuzz_integration_test.rs  iso_compliance_comprehensive.rs  iso_compliance_pragmatic.rs  iso_compliance_tests.rs  pdf_specification_compliance.rs  property_tests.proptest-regressions  property_tests.rs
(+359 files in other folders)
