[package]
name = "oxidize_pdf"
version = "0.1.0"
edition = "2021"
authors = ["Santiago Fernández de Munoz"]
description = "A native PDF generation and editing library written in Rust"
license = "GPL-3.0"
repository = "https://github.com/bzsanti/oxidizePdf"
keywords = ["pdf", "document", "generation", "graphics", "text"]
categories = ["graphics", "text-processing", "encoding"]

[dependencies]
thiserror = "1.0"
chrono = "0.4"
lazy_static = "1.4"

[dev-dependencies]

[features]
default = []
compression = ["flate2"]

[dependencies.flate2]
version = "1.0"
optional = true
