[package]
name = "oxidize-pdf-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf-api"
description = "REST API for oxidizePdf (Community edition)"
keywords = ["pdf", "api", "rest", "web"]
categories = ["web-programming::http-server"]
readme = "README.md"

[dependencies]
# Core functionality
oxidize-pdf = { version = "^0.1.2" }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = "2.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File operations
zip = "2.2"
tempfile = "3.8"

[lib]
name = "oxidize_pdf_api"
path = "src/lib.rs"

[[bin]]
name = "oxidize-pdf-api"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
http-body-util = "0.1"
hyper = "1.0"