[package]
name = "oxidize-pdf-api"
version = "1.1.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf-api"
description = "REST API for oxidizePdf (Community edition)"
keywords = ["pdf", "api", "rest", "web"]
categories = ["web-programming::http-server"]
readme = "README.md"

[dependencies]
# Core functionality
oxidize-pdf = { version = "1.1.6", path = "../oxidize-pdf-core" }

# Web framework
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File operations
zip = "4.3.0"
tempfile = "3.8"

[lib]
name = "oxidize_pdf_api"
path = "src/lib.rs"

[[bin]]
name = "oxidize-pdf-api"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
http-body-util = "0.1"
hyper = "1.0"