[package]
name = "oxidize-pdf-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf-cli"
description = "Command-line interface for oxidizePdf"
keywords = ["pdf", "cli", "command-line"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "oxidizepdf"
path = "src/main.rs"

[dependencies]
# Core functionality
oxidize-pdf = { path = "../oxidize-pdf-core" }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }