[package]
name = "oxidize-pdf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf"
homepage = "https://github.com/bzsanti/oxidizePdf"
description = "A pure Rust PDF generation and manipulation library with zero external dependencies"
keywords = ["pdf", "document", "generation", "parser", "graphics"]
categories = ["graphics", "text-processing", "parsing", "multimedia::images"]
readme = "../README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
lazy_static = { workspace = true }

# Compression (optional)
flate2 = { workspace = true, optional = true }

# Serialization (for PRO features)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "hello_world"

[[example]]
name = "graphics_demo"

[[example]]
name = "text_formatting"

[[example]]
name = "text_wrapping"

[[example]]
name = "simple_text_wrap"

[[example]]
name = "ai_ready_invoice"
required-features = ["semantic"]

[[example]]
name = "basic_tagging"

[[example]]
name = "parse_pdf"

[[example]]
name = "jpeg_image"

[[example]]
name = "comprehensive_demo"

[[example]]
name = "parse_and_extract"

[features]
default = ["compression"]

# Basic features
compression = ["flate2"]

# Semantic marking (Community level - basic tagging)
semantic = []

# PRO edition features (requires commercial license)
pro = ["semantic", "serde", "serde_json"]

# Enterprise features
enterprise = ["pro"]