[package]
name = "oxidize-pdf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf"
homepage = "https://github.com/bzsanti/oxidizePdf"
description = "A pure Rust PDF generation and manipulation library with zero external dependencies"
keywords = ["pdf", "document", "generation", "parser", "graphics"]
categories = ["graphics", "text-processing", "parsing", "multimedia::images"]
readme = "../README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
lazy_static = { workspace = true }

# Compression (optional)
flate2 = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }

# Hashing
md5 = "0.7"

# OCR dependencies (optional)
tesseract = { version = "0.13", optional = true }
leptonica-plumbing = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "hello_world"

[[example]]
name = "graphics_demo"

[[example]]
name = "text_formatting"

[[example]]
name = "text_wrapping"

[[example]]
name = "simple_text_wrap"

[[example]]
name = "extract_images"

[[example]]
name = "create_pdf_with_images"

[[example]]
name = "ai_ready_invoice"
required-features = ["semantic"]

[[example]]
name = "basic_tagging"

[[example]]
name = "parse_pdf"

[[example]]
name = "jpeg_image"

[[example]]
name = "comprehensive_demo"

[[example]]
name = "parse_and_extract"

[[example]]
name = "tesseract_ocr_demo"
required-features = ["ocr-tesseract"]

[[bench]]
name = "ocr_benchmarks"
harness = false

[features]
default = ["compression"]

# Basic features
compression = ["dep:flate2"]

# OCR features
ocr-tesseract = ["tesseract", "leptonica-plumbing"]
ocr-full = ["ocr-tesseract"]

# Semantic marking (Community level - basic tagging)
semantic = ["serde", "serde_json"]