[package]
name = "oxidize-pdf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/oxidize-pdf"
homepage = "https://github.com/bzsanti/oxidizePdf"
description = "A pure Rust PDF generation and manipulation library with zero external dependencies"
keywords = ["pdf", "document", "generation", "parser", "graphics"]
categories = ["graphics", "text-processing", "parsing", "multimedia::images"]
readme = "../README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
lazy_static = { workspace = true }

# Compression (optional)
flate2 = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }

# Hashing
md5 = "0.8"

# Parallel processing
num_cpus = "1.16"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "handleapi", "winnt"] }

# Image processing dependencies (optional)
image = { workspace = true, optional = true }

# OCR dependencies (optional)
tesseract = { version = "0.15", optional = true }
leptonica-plumbing = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "hello_world"

[[example]]
name = "graphics_demo"

[[example]]
name = "text_formatting"

[[example]]
name = "text_wrapping"

[[example]]
name = "simple_text_wrap"

[[example]]
name = "extract_images"

[[example]]
name = "create_pdf_with_images"

[[example]]
name = "ai_ready_invoice"
required-features = ["semantic"]

[[example]]
name = "basic_tagging"

[[example]]
name = "parse_pdf"

[[example]]
name = "jpeg_image"

[[example]]
name = "comprehensive_demo"

[[example]]
name = "parse_and_extract"

[[example]]
name = "tesseract_ocr_demo"
required-features = ["ocr-tesseract"]

[[example]]
name = "memory_optimization"

[[example]]
name = "metadata"

[[example]]
name = "streaming_support"

[[example]]
name = "batch_processing"

[[example]]
name = "error_recovery"

[[example]]
name = "analyze_pdf_rendering"

[[bench]]
name = "ocr_benchmarks"
harness = false

[features]
default = ["compression"]

# Basic features
compression = ["dep:flate2"]

# Image processing features
external-images = ["dep:image"]

# OCR features
ocr-tesseract = ["dep:tesseract", "dep:leptonica-plumbing"]
ocr-full = ["ocr-tesseract"]

# Test features
real-pdf-tests = []  # Enable tests with real PDF files from fixtures

# Semantic marking (Community level - basic tagging)
semantic = ["dep:serde", "dep:serde_json"]
