[package]
name = "oxidize-pdf-test-suite"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidize-pdf = { path = "../oxidize-pdf-core" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Testing dependencies
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.38"
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

# For test data generation
rand = "0.8"
hex = "0.4"
regex = "1.11"

# For memory profiling
stats_alloc = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lib]
name = "oxidize_pdf_test_suite"
path = "src/lib.rs"

[[bin]]
name = "generate-test-pdfs"
path = "src/bin/generate_test_pdfs.rs"

[[bin]]
name = "iso-compliance-report"
path = "src/bin/iso_compliance_report.rs"

[[bin]]
name = "iso-compliance-report-fixed"
path = "src/bin/iso_compliance_report_fixed.rs"

[[bin]]
name = "iso-compliance-report-v2"
path = "src/bin/iso_compliance_report_v2.rs"

[[bin]]
name = "iso-compliance-report-v3"
path = "src/bin/iso_compliance_report_v3.rs"

[[bin]]
name = "iso-compliance-report-final"
path = "src/bin/iso_compliance_report_final.rs"


[[bench]]
name = "parser_bench"
harness = false

[features]
default = []
# Enable downloading external test suites
external-suites = []