[package]
name = "oxidize-pdf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oxidize-pdf-core = { path = "../../oxidize-pdf-core" }
oxidize-pdf-test-suite = { path = ".." }

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_content_parser"
path = "fuzz_targets/fuzz_content_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_operations"
path = "fuzz_targets/fuzz_operations.rs"
test = false
doc = false

[[bin]]
name = "fuzz_generator"
path = "fuzz_targets/fuzz_generator.rs"
test = false
doc = false